restructure to separate cli from api

--- a/meson.build
+++ b/meson.build
@@ -50,4 +50,5 @@ subdir('src')
 executable('vswitch',
     sources: sources,
     install: true,
+    include_directories: includes,
     dependencies: deps) 
