Support input/output link queues for stages

--- a/src/meson.build
+++ b/src/meson.build
@@ -19,7 +19,10 @@ sources = files(
 
 subdir('cli')
 subdir('lib')
-includes = include_directories('include')
+includes = include_directories(
+    'include',
+    'lib',
+)
 
 deps += [dependency('threads')]
 deps += [dependency('numa', required: true)]
