Add a number of features
- Option to enable graph pcap
- Option to enable graph stats
- Add forwarder node that just switches packets between peers

--- a/src/lib/meson.build
+++ b/src/lib/meson.build
@@ -11,4 +11,5 @@ sources += files(
         'node/eventdev_dispatcher.c',
         'node/eventdev_rx.c',
         'node/eventdev_tx.c',
+        'node/forward.c',
 )
