lib/node: Add classifier node
Also add CLI "stage set <stage_name> graph <node-list> command to allow
configuration of nodes for stages.

--- a/src/lib/meson.build
+++ b/src/lib/meson.build
@@ -12,4 +12,5 @@ sources += files(
         'node/eventdev_rx.c',
         'node/eventdev_tx.c',
         'node/forward.c',
+        'node/classifier.c',
 )
